# taptrade-core

./: .gitignore  LICENSE  README.md  shell.nix  taptrade_api_mockoon.json  todos.md
.devcontainer/: devcontainer.json
docs/: rpc_node.md
docs/Obsidian/: Obsidian How-To.md  Project Timeline.md  signet-instance.md
docs/Obsidian/.obsidian/: bookmarks.json
docs/Obsidian/Research/Bitcoin fundamentals/: Signature and Flags.canvas
docs/Obsidian/Research/Implementation/: BDK.md  UI ideas.canvas
docs/Obsidian/Research/Trade Pipelines/new concepts/: concept locking script 1.canvas  concept pipeline 1.canvas
docs/TapTrade_obs/.obsidian/: graph.json  workspace.json
docs/TapTrade_obs/Research/Bitcoin fundamentals/: Knowledge sources.md  Signature and Flags.canvas  Spending Taproot UTXOs.md  Taproot output structure.canvas
docs/TapTrade_obs/Research/Implementation/: Libraries.md
docs/TapTrade_obs/Research/Implementation/CLI demonstrator architecture/: demonstrator architecture.canvas
docs/TapTrade_obs/Research/Trade Pipelines/: Existing research.md  current trade flow.canvas
docs/TapTrade_obs/Research/Trade Pipelines/new concepts/: concept locking script 1.canvas  concept pipeline 1.canvas  (+2 more)
taptrade-cli-demo/: Cargo.toml
taptrade-cli-demo/bitcoin-testnet4-node/: docker-compose.yml
taptrade-cli-demo/bitcoin-testnet4-node/bitcoin_data/: bitcoin.conf
taptrade-cli-demo/coordinator/: .cookie  .env  Cargo.toml
taptrade-cli-demo/coordinator/dbs/: trades.db
taptrade-cli-demo/coordinator/dbs/bdk-wallet/: db  snap.000000000000F6EB
taptrade-cli-demo/coordinator/src/: main.rs
taptrade-cli-demo/coordinator/src/communication/: api.rs  communication_utils.rs  handler_errors.rs  mod.rs  utils.rs
taptrade-cli-demo/coordinator/src/coordinator/: bond_monitoring.rs  coordinator_utils.rs  create_taproot.rs  create_taproot.rs.unused  escrow_cli.rs  mempool_monitoring.rs  mod.rs  monitoring.rs  tx_confirmation_monitoring.rs  utils.rs  verify_bond.rs
taptrade-cli-demo/coordinator/src/database/: db_tests.rs  mod.rs
taptrade-cli-demo/coordinator/src/sqlite_db/: mod.rs
taptrade-cli-demo/coordinator/src/taproot_contract/: generate_descriptor.rs
taptrade-cli-demo/coordinator/src/wallet/: bond.rs  escrow_psbt.rs  mod.rs  payout_tx.rs  utils.rs  verify_tx.rs  wallet_tests.rs  wallet_utils.rs
taptrade-cli-demo/docs/: rpc_node.md
taptrade-cli-demo/rpc_node/regtest/: decoderawtx.sh  docker-compose.yml  get-coins-to-address.sh  getrawtx.sh
taptrade-cli-demo/rpc_node/regtest/data/: Dockerfile  bitcoin.conf  mine-blocks.sh
taptrade-cli-demo/rpc_node/regtest/electrs/: Dockerfile
taptrade-cli-demo/rpc_node/regtest/fulcrum/: Dockerfile  config.conf
taptrade-cli-demo/rpc_node/signet/: bitcoin.conf  docker-compose.yml
taptrade-cli-demo/src/: main.rs
taptrade-cli-demo/src/cli/: mod.rs
taptrade-cli-demo/src/communication/: mod.rs
taptrade-cli-demo/trader/: .env  Cargo.toml  maker.env  taker.env  todos.md
taptrade-cli-demo/trader/src/: main.rs
taptrade-cli-demo/trader/src/cli/: mod.rs
taptrade-cli-demo/trader/src/communication/: api.rs  mod.rs  taker_requests.rs
taptrade-cli-demo/trader/src/trading/: maker_utils.rs  mod.rs  taker_utils.rs  utils.rs
taptrade-cli-demo/trader/src/wallet/: bond.rs  mod.rs  musig2.rs  musig2_utils.rs  wallet_utils.rs
