[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["tokio", "json"] }
bdk = "0.29.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"

[profile.release]
lto = true
opt-level = 3
strip = true
