[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitcoin = "0.32.2"
miniscript = "12.0.0"
axum = { version = "0.7.5", features = ["tokio", "json"] }
# "use-esplora-async", "async-interface", for async esplora
bdk = { version = "0.29.0", default-features = false, features = ["key-value-db", "bitcoinconsensus", "std", "electrum", "use-esplora-ureq","compiler", "verify"] }
# bitcoinconsensus = "0.106.0"

dotenv = "0.15.0"
futures-util = "0.3.30"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["full", "test-util"] }
tower = "0.4.13"
log = "0.4.22"
env_logger = "0.11.3"

[profile.release]
lto = true
opt-level = 3
strip = true
