[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.32.2", features = ["base64", "bitcoinconsensus"] }
miniscript = "12.0.0"
axum = { version = "0.7.5", features = ["tokio", "json"] }
# "use-esplora-async", "async-interface", for async esplora
bdk = { version = "0.29", default-features = false, features = ["key-value-db", "bitcoinconsensus", "std", "electrum", "use-esplora-ureq","compiler", "verify", "rpc"] }
# bitcoinconsensus = "0.106.0"
serde_json = "1.0"

dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.39", features = ["full", "test-util", "rt"] }
tower = "0.4"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
validator = { version = "0.18", features = ["derive"] }
musig2 = "0.0.11"
bincode = "1.3.3"

[profile.release]
lto = true
opt-level = 3
strip = true
